fixed zip code button alignment

--- a/public/style3.css
+++ b/public/style3.css
@@ -8,7 +8,10 @@ body {
 
 #zipcode {
   opacity: 0.5;
+  margin-right: 15px;
 }
+
+
 
 #information {
   background-color: white;
@@ -26,5 +29,6 @@ body {
 
 button {
   opacity: 0.9;
+  margin-top: 4px;
 
 }
